@@ -297,6 +297,8 @@ application {
             "--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
             "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
             "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
+            // required for getting log file
+            '--add-opens=java.logging/java.util.logging=ALL-UNNAMED',
 
             // logging
             "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration"
@@ -414,6 +416,7 @@ runtime {
                    "-enableassertions",
                    "-Djava.util.logging.config.class=io.github.mzmine.main.MZmineLoggingConfiguration",
                    "-Djava.net.useSystemProxies=true",
+                   "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
                    "--enable-preview",
         ]
     }
